fix: [AIFLY-1692] Fix table responsiveness on small windows (#11103)

--- a/apps/helpdesk/src/pages/aiAgent/KnowledgeHub/Table/KnowledgeHubTable.less
+++ b/apps/helpdesk/src/pages/aiAgent/KnowledgeHub/Table/KnowledgeHubTable.less
@@ -15,6 +15,7 @@
         flex-direction: column;
         flex-grow: 1;
         margin-top: var(--spacing-md);
+        overflow-x: auto;
 
         > [data-name='table-toolbar']:first-child
             > [data-name='box']:first-child {
@@ -39,9 +40,15 @@
         table {
             table-layout: fixed;
             height: 100%;
+            width: 100%;
         }
 
         // Base column widths (when metrics disabled)
+        // Minimum total width: 51px + 200px + 130px + 150px = 531px
+        &:not([data-metrics-enabled='true']) table {
+            min-width: 531px;
+        }
+
         // Checkbox column (first column)
         table th:first-child,
         table td:first-child {
@@ -56,6 +63,7 @@
         table td:nth-child(2) {
             width: auto;
             height: 40px;
+            min-width: 200px;
         }
 
         // Last Updated column (when no metrics)
@@ -71,41 +79,52 @@
         }
 
         // Metrics-enabled widths
+        // Minimum total width: 51px + 150px + 91px + 134px + 93px + 126px + 148px = 793px
         &[data-metrics-enabled='true'] {
+            table {
+                min-width: 793px;
+            }
+
             // Title column remains auto
             table th:nth-child(2),
             table td:nth-child(2) {
                 width: auto;
+                min-width: 150px;
             }
 
             // Tickets column
             table th:nth-child(3),
             table td:nth-child(3) {
                 width: 91px;
+                min-width: 91px;
             }
 
             // Handover Tickets column
             table th:nth-child(4),
             table td:nth-child(4) {
                 width: 134px;
+                min-width: 134px;
             }
 
             // Avg CSAT column
             table th:nth-child(5),
             table td:nth-child(5) {
                 width: 93px;
+                min-width: 93px;
             }
 
             // Last Updated column (second to last when metrics enabled)
             table th:nth-last-child(2),
             table td:nth-last-child(2) {
                 width: 126px;
+                min-width: 126px;
             }
 
             // In Use by AI Agent column (last column)
             table th:last-child,
             table td:last-child {
                 width: 148px;
+                min-width: 148px;
             }
         }
     }
